bpap-site/src/app/epk/epk.component.less
@h-text-width: 60%;
@h-text-height: calc(@h-text-width/3);
@margin-top-title: 70px;

@-webkit-keyframes fadein {
	from {opacity: 0.0;}
	to {opacity: 1;}
}

@keyframes fadein {
	from {opacity: 0.0;}
	to {opacity: 1;}
}

.pageView {
	background-color: black;
}

#background {
	background-image: url('../../assets/img/background.jpg');
	-webkit-background-size: cover;
  	-moz-background-size: cover;
  	-o-background-size: cover;
  	background-size: cover;
	background-color: black;
	background-position: bottom;

	-webkit-animation: fadein 2s; 
    animation: fadein 2s;
}

#contact-header {
	margin-top: @margin-top-title + 40;
	margin-bottom: 14px;
}

.contact {
	margin-left: 0;
	margin-right: 0;
	margin-bottom: 18px;
	font-family: Arial;
	color: white;
	font-size: 20px;
	max-width: 100%;
	
	.title {
		position: absolute;
		top: 1px;
		bottom: 0;
		left: 5px;
		height: 20px;
		margin: auto;
		font-size: 16px;
		font-weight: 600;
	}
	
	.contactdetail {
		display: flex;
		justify-content: center;
		align-items: center;
		text-align: center;
		margin: auto;		
		
		a {
			color: white;
		}
		
		a:hover {
			text-decoration: none;
		}
	}
}	

#header-text-container {
	height:400px;
	width: 100%;
	position: absolute;
	bottom: 0px;
	color: white;
	text-align: center;

	#header-text {
		display: inline-block;
		height: @h-text-height;
		width: @h-text-width;
		bottom: 40px;
		min-width: 1000px;
		margin: 0px auto;

		img {
			height: 100%;
			width: 100%;
			-webkit-user-drag: none;
			-khtml-user-drag: none;
			-moz-user-drag: none;
			-o-user-drag: none;
			user-drag: none;

			-webkit-animation: fadein 0.5s; 
    		animation: fadein 0.5s;
		}
	}
}

.title-header {
	color: white;
	margin-top: 60px;
	margin-bottom: 60px;
	font-family: Arial;
	font-size: 1.875em;
	font-weight: bold;
	letter-spacing: 5px;

	-webkit-animation: fadein 0.8s; 
    animation: fadein 0.8s;
}

#about-body {
	color: white;
	width: 900px;
	margin-left: auto;
	margin-right: auto;
	min-width: 600px;
	margin-top: 20px;
	font-family: Arial;
	font-size: 1.0em;
	font-weight: 500;
	text-align: justify;

	-webkit-animation: fadein 1s ; 
    animation: fadein 1s;
}

#info-text-container {
	//border: 1px solid red;
	color: white;
	text-align: center;
	
	background-image: url('../../assets/img/background2.png');
	-webkit-background-size: contain;
  	-moz-background-size: contain;
  	-o-background-size: contain;
  	background-size: contain;
  	background-repeat: no-repeat;
	background-color: black;
	background-position: bottom;

}

.music-links {
	margin-top: 13px;
	height: 35px;
	
	img {
		float: left;
		max-height: 100%;
	}
}

.press-container {
	margin-bottom: 45px;
	
	.press {
		text-align: left;
	}
}



.press-title {
	font-size: 32px;
	font-weight: 600;
	margin-bottom: 10px;
	
	a {
		color: white;
		
	  	-o-transition:.3s;
  		-ms-transition:.3s;
	  	-moz-transition:.3s;
	  	-webkit-transition:.3s;
		transition:.3s;
  
	}
	
	a:hover {
		text-decoration: none;
		color: #12e3e0;
	}
}

.press-author {
	a {
		color: white;
		
	  	-o-transition:.3s;
  		-ms-transition:.3s;
	  	-moz-transition:.3s;
	  	-webkit-transition:.3s;
		transition:.3s;
	}
	
	a:hover {
		text-decoration: none;
		color: #5e4fff;
	}
}

.album-art {
	width: 22%;
	color: white;
	font-size: bold;
	float: left;

	img {
		width: 100%;
	}
}

.album-info {
	display: inline-block;
    float: left;
    margin-left: 40px;
}

.album-text {
	font-family: Arial;
	text-align: left;

	.album-text-header {
		font-weight: bold;
		font-size: 18px;
	}

	.album-text-rdate {
		
	}

	.album-text-remark {
		font-size: 15px;
	}
}

.music-container {
	margin-bottom: 40px;
}

.event-container {
	margin-bottom: 28px;
	//padding-left: 15px;
	//padding-right: 15px;
	
	.event {
		font-family: Arial;
		text-align: left;
		color: white;
		font-weight: 600;
		font-size: 18px;
	}
}

.music-link {
	float: left;
	display: inline;
    height: 100%;
    margin-right: 10px;
}
	
.social {
	margin-left: 0;
	margin-right: 0;
	margin-bottom: 28px;
	font-family: Arial;
	color: white;
	font-weight: 600;
	font-size: 20px;
	max-width: 100%;
	width: 100%;
	
	.brandlogo {		
		img {
			height: 20px;
			position: absolute;
			top: 0;
			bottom: 0;
			left: 0;
			right: 0;
			margin: auto;
		}
	}
	
	.platformname {
		display: flex;
		justify-content: center;
		align-items: center;
		text-align: center;
		margin: auto;		
		
		a {
			color: white;
		}
		
		a:hover {
			text-decoration: none;
		}
	}
}	



.outline {
	padding: 10px;
	height: auto;
	display: inline-block;
	
	float: left;
    margin-bottom: 20px;
    margin-left: 50px;
}

#show-header {
	margin-top: @margin-top-title;
}

.venue {
	//border-bottom: 2px solid white;
}

